--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>SecondStrap - {% block title %}Home{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href={% static "images/logo.jpg" %}>
 
     <link rel="stylesheet" href="{% static 'css/breadcrumbs.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
