--- a/accounts/templates/accounts/new-password.html
+++ b/accounts/templates/accounts/new-password.html
@@ -4,7 +4,7 @@
 {% block title %}Set New Password{% endblock %}
 
 {% block extra_styles %}
-    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
+    <link rel="stylesheet" href="{% static 'css/accounts/forms.css' %}">
 {% endblock extra_styles %}
 
 {% block content %}
