Critical Bugs Fixed : Redirection problems , proper error handeling

--- a/accounts/templates/accounts/verify-otp-password_reset.html
+++ b/accounts/templates/accounts/verify-otp-password_reset.html
@@ -12,7 +12,7 @@
     <h2>Verify OTP</h2>
     <p>An OTP has been sent to your email. Please enter it below.</p>
 
-    <form method="POST" action="{% url 'verify-otp' %}">
+    <form method="POST" action="{% url 'forgot-verify-otp' %}">
         {% csrf_token %}
         
         <div class="form-group">
