--- a/userFolder/products/templates/products/product_detail.html
+++ b/userFolder/products/templates/products/product_detail.html
@@ -11,16 +11,22 @@
 <div class="product-detail-container">
     
     <div class="product-gallery">
-     <div class="gallery-main img-zoom-container">
-         <img src="{{product.image}}" alt="{{product.name}}" id="main-product-image">
-     </div>
-     <div id="zoom-result" class="img-zoom-result"></div>
-     <div class="gallery-thumbnails">
-         {% for image in images_list_limited %}
-         <img src="{{image.image_url}}" alt="Thumbnail 1" class="thumbnail-img" data-image="{{image.image_url}}">
-         {% endfor %}
-     </div>
- </div>
+        <div class="gallery-main img-zoom-container">
+            <img src="{{product.image}}" alt="{{product.name}}" id="main-product-image">
+        </div>
+        <div id="zoom-result" class="img-zoom-result"></div>
+        <div class="gallery-thumbnails">
+            {% for image in images_list_limited %}
+            <img src="{{image.image_url}}" alt="Thumbnail 1" class="thumbnail-img" data-image="{{image.image_url}}">
+            {% endfor %}
+        </div>
+    </div>
+    <!-- Image Popup Modal -->
+    <div id="imageModal" class="image-modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
+
 
     <div class="product-info">
         <h1>{{product.name}}</h1>
@@ -241,6 +247,33 @@
         galleryMain.addEventListener('mouseleave', function() {
             mainImage.style.transformOrigin = 'center center';
         });
+                // --- Image Click to Enlarge (Modal) ---
+        const modal = document.getElementById('imageModal');
+        const modalImg = document.getElementById('modalImage');
+        const closeModal = document.querySelector('.close-modal');
+
+        // When user clicks on main product image
+        mainImage.addEventListener('click', function() {
+            modal.style.display = 'block';
+            modalImg.src = this.src;
+        });
+
+        // Also allow thumbnails to open modal when clicked (optional)
+        thumbnails.forEach(thumb => {
+            thumb.addEventListener('dblclick', function() {
+                modal.style.display = 'block';
+                modalImg.src = this.dataset.image;
+            });
+        });
+
+        // Close modal when clicking on close button or outside image
+        closeModal.addEventListener('click', () => modal.style.display = 'none');
+        modal.addEventListener('click', (e) => {
+            if (e.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+
 
     });
 </script>
